--- a/index.html
+++ b/index.html
@@ -25,33 +25,31 @@
     <div class="outer-container">
       <header class="header">
         <div class="inner-container">
-            <a
-              class="logo-link animate__animated animate__bounce"
-              href="./index.html"
-              ><span class="logo-link__web">Web</span>Studio</a
-            >
-            <!-- menu -->
-            <button type="button" class="btn-open__menu" data-open-Menu>
-              <svg class="menu__svg-open">
-                <use href="./img/icons/symbol-defs.svg#icon-menu"></use>
-              </svg>
-            </button>
-            <!-- end of menu -->
-            <nav class="navigation">
-              <ul class="nav-list">
-                <li class="nav-list__item">
-                  <a class="nav-list__link" href="./index.html"> Студія </a>
-                </li>
-                <li class="nav-list__item">
-                  <a class="nav-list__link" href="./portfolio.html">
-                    Портфоліо
-                  </a>
-                </li>
-                <li class="nav-list__item">
-                  <a class="nav-list__link" href="#"> Контакти </a>
-                </li>
-              </ul>
-            </nav>
+          <a
+            class="logo-link animate__animated animate__bounce"
+            href="./index.html"
+            ><span class="logo-link__web">Web</span>Studio</a
+          >
+          <button type="button" class="btn-open__menu" data-open-Menu>
+            <svg class="menu__svg-open">
+              <use href="./img/icons/symbol-defs.svg#icon-menu"></use>
+            </svg>
+          </button>
+          <nav class="navigation">
+            <ul class="nav-list">
+              <li class="nav-list__item">
+                <a class="nav-list__link" href="./index.html"> Студія </a>
+              </li>
+              <li class="nav-list__item">
+                <a class="nav-list__link" href="./portfolio.html">
+                  Портфоліо
+                </a>
+              </li>
+              <li class="nav-list__item">
+                <a class="nav-list__link" href="#"> Контакти </a>
+              </li>
+            </ul>
+          </nav>
           <div class="inner-container__contacts">
             <a
               class="header-wrapper__contact-link"
@@ -71,9 +69,7 @@
           </div>
         </div>
       </header>
-      <!--Main content-->
       <main>
-        <!--Block hero-->
         <section class="hero">
           <h1 class="hero__title animate__animated animate__rubberBand">
             Ефективні рішення для<br />
@@ -151,8 +147,7 @@
             </form>
           </div>
         </section>
-        <!--Секція Переваги-->
-        <!-- <section class="features" data-aos="flip-up" data-aos-duration="3000">
+        <section class="features" data-aos="flip-up" data-aos-duration="3000">
           <div class="inner-container">
             <h2 class="visually-hidden">Perevagy</h2>
             <ul class="features-list">
@@ -186,9 +181,8 @@
               </li>
             </ul>
           </div>
-        </section> -->
-        <!--Секція Чим ми займаємося-->
-        <!-- <section class="works" data-aos="zoom-in-up">
+        </section>
+        <section class="works" data-aos="zoom-in-up">
           <div class="inner-container">
             <h2 class="our-skills">Чим ми займаємося</h2>
             <ul class="works-list">
@@ -215,14 +209,13 @@
               </li>
             </ul>
           </div>
-        </section> -->
-        <!--Секція Наша команда-->
-        <!-- <section class="team" data-aos="fade-up">
+        </section>
+        <section class="team" data-aos="fade-up">
           <div class="inner-container">
             <h2 class="team__title">Наша команда</h2>
             <ul class="team-list">
               <li class="team-list__item">
-                <div class="team-list__thumb"> -->
+                <div class="team-list__thumb">
                   <!-- <picture>
                     <source
                       class="img"
@@ -241,7 +234,7 @@
                     />
 
                   </picture> -->
-                  <!-- <img class="img" src="img/igor.jpg" alt="Ігор Дем'яненко" />
+                  <img class="img" src="img/igor.jpg" alt="Ігор Дем'яненко" />
                 </div>
                 <h3 class="team-list__name">Ігор Дем'яненко</h3>
                 <p class="team-list__text">Product Designer</p>
@@ -285,7 +278,7 @@
                 </ul>
               </li>
               <li class="team-list__item">
-                <div class="team-list__thumb"> -->
+                <div class="team-list__thumb">
                   <!-- <picture>
                     <source class="img"
                       srcset="img/olga.jpg 1x, img/olga@2x.jpg 2x"
@@ -300,7 +293,7 @@
                       media="(max-width: 767px)"
                     />
                   </picture> -->
-                  <!-- <img class="img" src="img/olga.jpg" alt="Ольга Рєпіна" />
+                  <img class="img" src="img/olga.jpg" alt="Ольга Рєпіна" />
                 </div>
                 <h3 class="team-list__name">Ольга Рєпіна</h3>
                 <p class="team-list__text">Frontend Developer</p>
@@ -344,7 +337,7 @@
                 </ul>
               </li>
               <li class="team-list__item">
-                <div class="team-list__thumb"> -->
+                <div class="team-list__thumb">
                   <!-- <picture>
                     <source class="img"
                       srcset="img/mykola.jpg 1x, img/mykola@2x.jpg 2x"
@@ -366,7 +359,7 @@
                     />
                     
                   </picture> -->
-                  <!-- <img class="img" src="img/mykola.jpg" alt="Микола Тарасов" />
+                  <img class="img" src="img/mykola.jpg" alt="Микола Тарасов" />
                 </div>
                 <h3 class="team-list__name">Микола Тарасов</h3>
                 <p class="team-list__text">Marketing</p>
@@ -410,7 +403,7 @@
                 </ul>
               </li>
               <li class="team-list__item">
-                <div class="team-list__thumb"> -->
+                <div class="team-list__thumb">
                   <!-- <picture>
                     <source class="img"
                       srcset="img/mykhailo.jpg 1x, img/mykhailo@2x.jpg 2x"
@@ -432,7 +425,7 @@
                     />
                     
                   </picture> -->
-                  <!-- <img
+                  <img
                     class="img"
                     src="img/mykhailo.jpg"
                     alt="Михайло Єрмаков"
@@ -530,8 +523,7 @@
               </li>
             </ul>
           </div>
-        </section> -->
-        <!-- menu -->
+        </section>
         <div class="menu is-hidden">
           <button type="button" class="menu__btn-close" data-close-Menu>
             <svg class="menu__svg-close">
@@ -595,42 +587,27 @@
             </li>
           </ul>
         </div>
-        <!-- end of menu -->
       </main>
 
-      <!--Футер-->
-      <!-- <footer class="footer">
-        <div class="footer-wrapper">
+      <footer class="footer">
+        <div class="inner-container">
           <section class="address">
             <h2 class="visually-hidden">address</h2>
-            <div class="footer-wrapper__left">
-              logo
-              <nav class="logo">
-                <a class="logo__link" href="./index.html"
-                  ><span class="logo-link__web">Web</span>Studio</a
-                >
-              </nav>
-              Aдреса
-              <address class="footer-wrapper__street">
-                м. Київ, пр-т Лесі Українки, 26
-              </address>
-              Контактні дані
-              <ul class="footer-contact-list">
-                <li>
-                  <a
-                    href="mailto:info@devstudio.com"
-                    class="footer-contact-list__link"
-                  >
-                    info@devstudio.com
-                  </a>
-                </li>
-                <li class="footer-contact-list__item">
-                  <a href="tel:+380961111111" class="footer-contact-list__link">
-                    +38 096 111 11 11
-                  </a>
-                </li>
-              </ul>
-            </div>
+            <a class="logo__link" href="./index.html"
+              ><span class="logo-link__web">Web</span>Studio</a
+            >
+            <address class="address__street">
+              <a href="#" class="address__city">м. Київ, пр-т Лесі Українки, 26</a>
+              <a
+                href="mailto:info@devstudio.com"
+                class="address__link"
+              >
+                info@devstudio.com
+              </a>
+              <a href="tel:+380961111111" class="address__link">
+                +38 096 111 11 11
+              </a>
+            </address>
           </section>
           <section class="join">
             <h2 class="join__title">приєднуйтесь</h2>
@@ -689,7 +666,7 @@
             </form>
           </section>
         </div>
-      </footer> -->
+      </footer>
     </div>
     <script src="./js/mobile-menu.js"></script>
     <script src="./js/modal.js"></script>
