--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </form>
           </div>
         </section>
-        <section class="features" data-aos="flip-up" data-aos-duration="3000">
+        <section class="features">
           <div class="inner-container">
             <h2 class="visually-hidden">Perevagy</h2>
             <ul class="features-list">
@@ -182,7 +182,7 @@
             </ul>
           </div>
         </section>
-        <section class="works" data-aos="zoom-in-up">
+        <section class="works">
           <div class="inner-container">
             <h2 class="our-skills">Чим ми займаємося</h2>
             <ul class="works-list">
@@ -210,31 +210,13 @@
             </ul>
           </div>
         </section>
-        <section class="team" data-aos="fade-up">
+        <section class="team">
           <div class="inner-container">
             <h2 class="team__title">Наша команда</h2>
             <ul class="team-list">
               <li class="team-list__item">
                 <div class="team-list__thumb">
-                  <!-- <picture>
-                    <source
-                      class="img"
-                      srcset="img/igor.jpg 1x, img/igor@2x.jpg 2x"
-                      media="(min-width: 1200px)"
-                    />
-                    <source
-                      class="img"
-                      srcset="img/tablet/igor.jpg 1x, img/tablet/igor@2x.jpg 2x"
-                      media="(min-width: 768px)"
-                    />
-                    <source
-                      class="img"
-                      srcset="/img/phone/igor.jpg 1x, /img/phone/igor@2x.jpg"
-                      media="(max-width: 767px)"
-                    />
-
-                  </picture> -->
-                  <img class="img" src="img/igor.jpg" alt="Ігор Дем'яненко" />
+                  <img class="img" src="img/igor.jpg" srcset="img/igor.jpg 1x,img/igor@2x.jpg 2x" alt="Ігор Дем'яненко" />
                 </div>
                 <h3 class="team-list__name">Ігор Дем'яненко</h3>
                 <p class="team-list__text">Product Designer</p>
@@ -279,21 +261,7 @@
               </li>
               <li class="team-list__item">
                 <div class="team-list__thumb">
-                  <!-- <picture>
-                    <source class="img"
-                      srcset="img/olga.jpg 1x, img/olga@2x.jpg 2x"
-                      media="(min-width: 1200px)"
-                    />
-                    <source class="img"
-                      srcset="img/tablet/olga.jpg, /img/tablet/olga@2x.jpg 2x"
-                      media="(min-width: 768px)"
-                    />
-                    <source class="img"
-                      srcset="img/phone/olga.ipg, img/phone/olga@2x.jpg 2x"
-                      media="(max-width: 767px)"
-                    />
-                  </picture> -->
-                  <img class="img" src="img/olga.jpg" alt="Ольга Рєпіна" />
+                  <img class="img" src="img/olga.jpg" srcset="img/olga.jpg 1x,img/olga@2x.jpg 2x" alt="Ольга Рєпіна" />
                 </div>
                 <h3 class="team-list__name">Ольга Рєпіна</h3>
                 <p class="team-list__text">Frontend Developer</p>
@@ -338,28 +306,7 @@
               </li>
               <li class="team-list__item">
                 <div class="team-list__thumb">
-                  <!-- <picture>
-                    <source class="img"
-                      srcset="img/mykola.jpg 1x, img/mykola@2x.jpg 2x"
-                      media="(min-width: 1200px)"
-                    />
-                    <source class="img"
-                      srcset="
-                        /img/tablet/mykola.jpg   1x,
-                        img/tablet/mykola@2x.jpg
-                      "
-                      media="(min-width: 768px)"
-                    />
-                    <source class="img"
-                      srcset="
-                        /img/phone/mykola.jpg    1x,
-                        /img/phone/mykola@2x.jpg 2x
-                      "
-                      media="(max-width: 767px)"
-                    />
-                    
-                  </picture> -->
-                  <img class="img" src="img/mykola.jpg" alt="Микола Тарасов" />
+                  <img class="img" src="img/mykola.jpg" srcset="img/mykola.jpg 1x,img/mykola@2x.jpg 2x" alt="Микола Тарасов" />
                 </div>
                 <h3 class="team-list__name">Микола Тарасов</h3>
                 <p class="team-list__text">Marketing</p>
@@ -404,30 +351,9 @@
               </li>
               <li class="team-list__item">
                 <div class="team-list__thumb">
-                  <!-- <picture>
-                    <source class="img"
-                      srcset="img/mykhailo.jpg 1x, img/mykhailo@2x.jpg 2x"
-                      media="(min-width: 1200px)"
-                    />
-                    <source class="img"
-                      srcset="
-                        img/tablet/mykhailo.jpg    1x,
-                        img/tablet/mykhailo@2x.jpg 2x
-                      "
-                      media="(min-width: 768px)"
-                    />
-                    <source class="img"
-                      srcset="
-                        img/phone/mykhailo.jpg  1x,
-                        img/phone/mykhailo@2x.jpg 2x
-                      "
-                      media="(max-width: 767px)"
-                    />
-                    
-                  </picture> -->
                   <img
                     class="img"
-                    src="img/mykhailo.jpg"
+                    src="img/mykhailo.jpg" srcset="img/mykhailo.jpg 1x,img/mykhailo@2x.jpg 2x"
                     alt="Михайло Єрмаков"
                   />
                 </div>
@@ -475,7 +401,7 @@
             </ul>
           </div>
         </section>
-        <section class="customers" data-aos="fade-left">
+        <section class="customers">
           <div class="inner-container">
             <h2 class="customers__title">Постійні клієнти</h2>
             <ul class="customers-list">
