--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
             </form>
           </div>
         </section>
-        <section class="features">
+        <section class="features" data-aos="flip-right">
           <div class="inner-container">
             <h2 class="visually-hidden">Perevagy</h2>
             <ul class="features-list">
@@ -182,7 +182,7 @@
             </ul>
           </div>
         </section>
-        <section class="works">
+        <section class="works" data-aos="flip-right">
           <div class="inner-container">
             <h2 class="our-skills">Чим ми займаємося</h2>
             <ul class="works-list">
@@ -210,7 +210,7 @@
             </ul>
           </div>
         </section>
-        <section class="team">
+        <section class="team" data-aos="flip-right">
           <div class="inner-container">
             <h2 class="team__title">Наша команда</h2>
             <ul class="team-list">
